# python_web_scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt
play/: async.py  context_manager.py  decorators.py  token.py
src/scraper/: book_details.py  logger.py  main.py  paths.py
src/scraper/db/: database.py  migrate.py
src/scraper/db/migrations/: 001_initial_schema.sql  002_add_last_seen_at.sql
src/scraper/http/: client.py  rate_limiter.py
src/scraper/models/: book.py
src/scraper/observability/: logger.py
src/scraper/parser/: book_parser.py
src/scraper/repository/: book_repository.py
